--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -49,13 +49,20 @@
    "source": [
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../RFCN/JPEGImages/'\n",
+    "RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
+    "# CROP_MODEL = 'resnet50_256_dropout5'\n",
+    "# CHECKPOINT_DIR = './checkpoints/checkpoint' + CROPMODEL + '/'\n",
+    "# LOG_DIR = './logs/log' + CROPMODEL + '/'\n",
     "CHECKPOINT_DIR = './checkpoints/checkpoint4/'\n",
+    "LOG_DIR = './logs/log4/'\n",
     "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "CONF_THRESH = 0.8\n",
     "ROWS = 224\n",
     "COLS = 224\n",
-    "BatchSize = 128\n",
-    "LearningRate = 1e-4\n",
+    "BATCHSIZE = 256\n",
+    "LEARNINGRATE = 1e-4\n",
+    "BG_THRESH_HI = 0.3\n",
+    "BG_THRESH_LO = 0.1\n",
     "# like RCNN expand the crop by 16 pixels\n",
     "p=16\n",
     "\n",
@@ -79,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 78,
    "metadata": {
     "collapsed": false
    },
@@ -88,7 +95,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading from fileGTbbox_df.pickle\n"
+      "Loading from file GTbbox_df.pickle\n"
      ]
     }
    ],
@@ -97,10 +104,10 @@
     "\n",
     "file_name = 'GTbbox_df.pickle'\n",
     "if os.path.exists('../data/'+file_name):\n",
-    "    print ('Loading from file'+file_name)\n",
+    "    print ('Loading from file '+file_name)\n",
     "    GTbbox_df = pd.read_pickle('../data/'+file_name)\n",
     "else:\n",
-    "    print ('Generating file'+file_name)       \n",
+    "    print ('Generating file '+file_name)       \n",
     "    GTbbox_df = pd.DataFrame(columns=['image_file','crop_index','crop_class','xmin','ymin','xmax','ymax'])  \n",
     "\n",
     "    crop_classes=FISH_CLASSES[:]\n",
@@ -132,31 +139,124 @@
     "                GTbbox_df.loc[len(GTbbox_df)]=[image_file,i,a[\"class\"],max(xmin_expand,0),max(ymin_expand,0),min(xmax_expand,width_image),min(ymax_expand,height_image)]\n",
     "                if a[\"class\"] != c: print(GTbbox_df.tail(1))\n",
     "\n",
-    "    #crop NoF by detections_full_AGNOSTICnms.pkl\n",
-    "    num_NoF_perIm = 10\n",
+    "#     #crop NoF by detections_full_AGNOSTICnms.pkl\n",
+    "#     num_NoF_perIm = 10\n",
     "    \n",
-    "    RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
-    "    with open('../data/RFCN_detections/detections_full_AGNOSTICnms_'+RFCN_MODEL+'.pkl','rb') as f:\n",
-    "        detections_full_AGNOSTICnms = pickle.load(f, encoding='latin1')\n",
-    "    train_detections_full_AGNOSTICnms = detections_full_AGNOSTICnms[1000:]\n",
+    "#     with open('../data/RFCN_detections/detections_full_AGNOSTICnms_'+RFCN_MODEL+'.pkl','rb') as f:\n",
+    "#         detections_full_AGNOSTICnms = pickle.load(f, encoding='latin1')\n",
+    "#     train_detections_full_AGNOSTICnms = detections_full_AGNOSTICnms[1000:]\n",
+    "#     with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
+    "#         test_files = f.readlines()\n",
+    "#     train_files = test_files[1000:]\n",
+    "#     assert len(train_detections_full_AGNOSTICnms) == len(train_files)\n",
+    "\n",
+    "#     for im in range(len(train_detections_full_AGNOSTICnms)):\n",
+    "#         if im%1000 == 0: print(im)\n",
+    "#         image_file = train_files[im][:9]+'.jpg'\n",
+    "#         image = Image.open(TEST_DIR+image_file)\n",
+    "#         width_image, height_image = image.size\n",
+    "\n",
+    "#         bboxes = []\n",
+    "#         detects_im = train_detections_full_AGNOSTICnms[im]\n",
+    "#         for i in range(len(detects_im)):\n",
+    "#             if detects_im[i,4] >= 0.999 and detects_im[i,2]<width_image and detects_im[i,3]<height_image:\n",
+    "#                 bboxes.append(detects_im[i,:]) \n",
+    "#         bboxes = np.asarray(bboxes)\n",
+    "#         bboxes = bboxes[np.random.choice(bboxes.shape[0], num_NoF_perIm, replace=False), :]\n",
+    "\n",
+    "#         for j in range(len(bboxes)):    \n",
+    "#             bbox = bboxes[j]\n",
+    "#             xmin = bbox[0]\n",
+    "#             ymin = bbox[1]\n",
+    "#             xmax = bbox[2]\n",
+    "#             ymax = bbox[3]\n",
+    "#             width = xmax-xmin\n",
+    "#             height = ymax-ymin\n",
+    "#             delta_width = p/(COLS-2*p)*width\n",
+    "#             delta_height = p/(ROWS-2*p)*height\n",
+    "#             xmin_expand = xmin-delta_width\n",
+    "#             ymin_expand = ymin-delta_height\n",
+    "#             xmax_expand = xmax+delta_width\n",
+    "#             ymax_expand = ymax+delta_height\n",
+    "#             assert max(xmin_expand,0)<min(xmax_expand,width_image)\n",
+    "#             assert max(ymin_expand,0)<min(ymax_expand,height_image)\n",
+    "#             GTbbox_df.loc[len(GTbbox_df)]=[image_file,j,'NoF',max(xmin_expand,0),max(ymin_expand,0),min(xmax_expand,width_image),min(ymax_expand,height_image)]\n",
+    "\n",
+    "    GTbbox_df.to_pickle('../data/'+file_name)    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Loading from fileNoFbbox_df.pickle\n"
+     ]
+    }
+   ],
+   "source": [
+    "# NoFbbox_df = ['image_file','crop_index','crop_class','xmin','ymin','xmax','ymax',\n",
+    "#               'NoF_RFCN','ALB_RFCN','BET_RFCN','DOL_RFCN','LAG_RFCN','OTHER_RFCN','SHARK_RFCN','YFT_RFCN']\n",
+    "def IoU(boxA, boxB):\n",
+    "    # determine the (x, y)-coordinates of the intersection rectangle\n",
+    "    xA = max(boxA[0], boxB[0])\n",
+    "    yA = max(boxA[1], boxB[1])\n",
+    "    xB = min(boxA[2], boxB[2])\n",
+    "    yB = min(boxA[3], boxB[3])\n",
+    "    # compute the area of intersection rectangle\n",
+    "    interArea = (xB - xA) * (yB - yA)\n",
+    "    # compute the area of both the prediction and ground-truth rectangles\n",
+    "    boxAArea = (boxA[2] - boxA[0]) * (boxA[3] - boxA[1])\n",
+    "    boxBArea = (boxB[2] - boxB[0]) * (boxB[3] - boxB[1])\n",
+    "    iou = interArea / float(boxAArea + boxBArea - interArea)\n",
+    "    return iou\n",
+    "\n",
+    "def bg_discrimination(box, gt_bboxes):\n",
+    "    # if BG_THRESH_LO<IoU<BG_THRESH_HI then box is bg return True\n",
+    "    IoUs = []\n",
+    "    for gt_box in gt_bboxes:\n",
+    "        IoUs.append(IoU(box, gt_box))\n",
+    "    if IoUs:\n",
+    "        if max(IoUs) > BG_THRESH_LO and max(IoUs) < BG_THRESH_HI:\n",
+    "            return True\n",
+    "        else:\n",
+    "            return False            \n",
+    "\n",
+    "file_name = 'NoFbbox_df.pickle'\n",
+    "if os.path.exists('../data/'+file_name):\n",
+    "    print ('Loading from file '+file_name)\n",
+    "    NoFbbox_df = pd.read_pickle('../data/'+file_name)\n",
+    "else:\n",
+    "    print ('Generating file '+file_name)\n",
+    "    with open('../data/RFCN_detections/detections_RoIs_'+RFCN_MODEL+'.pkl','rb') as f:\n",
+    "        detections_RoIs = pickle.load(f, encoding='latin1')\n",
+    "    train_detections_RoIs = detections_RoIs[1000:]\n",
     "    with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
     "        test_files = f.readlines()\n",
     "    train_files = test_files[1000:]\n",
-    "    assert len(train_detections_full_AGNOSTICnms) == len(train_files)\n",
+    "    assert len(train_detections_RoIs) == len(train_files)\n",
     "\n",
-    "    for im in range(len(train_detections_full_AGNOSTICnms)):\n",
+    "    NoFbbox_df = pd.DataFrame(columns=['image_file','crop_index','crop_class','xmin','ymin','xmax','ymax',\n",
+    "                                       'NoF_RFCN','ALB_RFCN','BET_RFCN','DOL_RFCN','LAG_RFCN','OTHER_RFCN','SHARK_RFCN','YFT_RFCN']) \n",
+    "\n",
+    "    for im in range(len(train_files)):\n",
     "        if im%1000 == 0: print(im)\n",
-    "        image_file = train_files[im][:9]+'.jpg'\n",
+    "        image_file = train_files[im][:-1]+'.jpg'\n",
     "        image = Image.open(TEST_DIR+image_file)\n",
     "        width_image, height_image = image.size\n",
+    "        gt_bboxes = GTbbox_df.loc[GTbbox_df['image_file'] == image_file, ['xmin','ymin','xmax','ymax']].values\n",
     "\n",
     "        bboxes = []\n",
-    "        detects_im = train_detections_full_AGNOSTICnms[im]\n",
+    "        detects_im = train_detections_RoIs[im]\n",
     "        for i in range(len(detects_im)):\n",
-    "            if detects_im[i,4] >= 0.999 and detects_im[i,2]<width_image and detects_im[i,3]<height_image:\n",
+    "            if bg_discrimination(detects_im[i,:4], gt_bboxes):\n",
     "                bboxes.append(detects_im[i,:]) \n",
-    "        bboxes = np.asarray(bboxes)\n",
-    "        bboxes = bboxes[np.random.choice(bboxes.shape[0], num_NoF_perIm, replace=False), :]\n",
     "\n",
     "        for j in range(len(bboxes)):    \n",
     "            bbox = bboxes[j]\n",
@@ -174,9 +274,10 @@
     "            ymax_expand = ymax+delta_height\n",
     "            assert max(xmin_expand,0)<min(xmax_expand,width_image)\n",
     "            assert max(ymin_expand,0)<min(ymax_expand,height_image)\n",
-    "            GTbbox_df.loc[len(GTbbox_df)]=[image_file,j,'NoF',max(xmin_expand,0),max(ymin_expand,0),min(xmax_expand,width_image),min(ymax_expand,height_image)]\n",
-    "\n",
-    "    GTbbox_df.to_pickle('../data/'+file_name)    "
+    "            NoFbbox_df.loc[len(NoFbbox_df)]=[image_file,j,'NoF',max(xmin_expand,0),max(ymin_expand,0),\n",
+    "                                             min(xmax_expand,width_image),min(ymax_expand,height_image)]+bbox[4:].tolist()\n",
+    "    \n",
+    "    NoFbbox_df.to_pickle('../data/'+file_name)"
    ]
   },
   {
@@ -184,22 +285,33 @@
    "metadata": {},
    "source": [
     "#visualization\n",
+    "# GTbbox_df = ['image_file','crop_index','crop_class','xmin',''ymin','xmax','ymax']\n",
     "\n",
-    "with open(\"../RFCN/ImageSets/Main/train_test.txt\",\"r\") as f:\n",
-    "    train_files = f.readlines()\n",
+    "image_files = NoFbbox_df[NoFbbox_df['NoF_RFCN']<0.5].image_file.unique()\n",
     "\n",
-    "for j in range(0,3777,500):\n",
-    "    im = Image.open('../RFCN/JPEGImages/'+train_files[j][:9]+'.jpg')\n",
+    "for j in range(len(image_files)):\n",
+    "    image_file = image_files[j]\n",
+    "    im = Image.open('../RFCN/JPEGImages/'+image_file)\n",
     "    im = np.asarray(im)\n",
     "    fig, ax = plt.subplots(figsize=(10, 8))\n",
     "    ax.imshow(im, aspect='equal')\n",
-    "    GT_crops = GTbbox_df.loc[GTbbox_df['image_file']==(train_files[j][:9]+'.jpg')]\n",
-    "    for index,row in GT_crops.iterrows():\n",
+    "    NoFbbox_dets = NoFbbox_df.loc[NoFbbox_df['image_file']==image_file]\n",
+    "    for index,row in NoFbbox_dets.iterrows():\n",
     "        row = row.tolist()\n",
-    "        bbox = row[4:8]\n",
+    "        bbox = row[3:7]\n",
+    "        pred = row[7:]\n",
+    "        score = max(pred)\n",
+    "        index = pred.index(score)\n",
+    "        fish = FISH_CLASSES[index]\n",
+    "        ax.add_patch(plt.Rectangle((bbox[0], bbox[1]), bbox[2] - bbox[0], bbox[3] - bbox[1], fill=False, edgecolor='red', linewidth=2))\n",
+    "        ax.text(bbox[0], bbox[1] - 4, 'RFCN_{:s} {:.3f}'.format(fish, score), bbox=dict(facecolor='red', alpha=0.5), fontsize=8, color='white')\n",
+    "    GT_dets = GTbbox_df.loc[GTbbox_df['image_file']==image_file]\n",
+    "    for index,row in GT_dets.iterrows():\n",
+    "        row = row.tolist()\n",
+    "        bbox = row[3:7]\n",
     "        ax.add_patch(plt.Rectangle((bbox[0], bbox[1]), bbox[2] - bbox[0], bbox[3] - bbox[1], fill=False, edgecolor='green', linewidth=2))\n",
-    "        ax.text(bbox[0], bbox[1] - 4, 'GT_{:s}'.format(row[3]), bbox=dict(facecolor='green', alpha=0.5), fontsize=8, color='white')\n",
-    "    ax.set_title(('Image {:s}').format(train_files[j][:-1]), fontsize=10)\n",
+    "        ax.text(bbox[0], bbox[1] -4, 'GT_{:s}'.format(row[2]), bbox=dict(facecolor='green', alpha=0.5), fontsize=8, color='white')\n",
+    "    ax.set_title(('Image {:s}').format(image_file), fontsize=10)\n",
     "    plt.axis('off')\n",
     "    plt.tight_layout()\n",
     "    plt.draw()\n"
@@ -209,20 +321,20 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [],
    "source": [
     "#train data prepare\n",
     "train_df, valid_df = train_test_split(GTbbox_df, test_size = 0.2, random_state=1986, stratify=GTbbox_df['crop_class'])\n",
     "\n",
-    "nb_perClass = int(BatchSize / len(FISH_CLASSES)) \n",
-    "samples_per_epoch=BatchSize*math.ceil(train_df.groupby('crop_class').size()['ALB']/nb_perClass)\n",
+    "nb_perClass = int(BATCHSIZE / len(FISH_CLASSES)) \n",
+    "samples_per_epoch=BATCHSIZE*math.ceil(train_df.groupby('crop_class').size()['ALB']/nb_perClass)\n",
     "  \n",
     "def train_generator(datagen, df):\n",
     "    while 1:\n",
-    "        batch_x = np.zeros((BatchSize, ROWS, COLS, 3), dtype=K.floatx())\n",
-    "        batch_y = np.zeros((BatchSize, len(FISH_CLASSES)), dtype=K.floatx())\n",
+    "        batch_x = np.zeros((BATCHSIZE, ROWS, COLS, 3), dtype=K.floatx())\n",
+    "        batch_y = np.zeros((BATCHSIZE, len(FISH_CLASSES)), dtype=K.floatx())\n",
     "        fn = lambda obj: obj.loc[np.random.choice(obj.index, size=nb_perClass, replace=False),:]\n",
     "        batch_df = df.groupby('crop_class', as_index=True).apply(fn)\n",
     "        i = 0\n",
@@ -289,7 +401,7 @@
     "        \n",
     "learningrate_schedule = ReduceLROnPlateau(monitor='val_loss', factor=0.1, patience=5, verbose=1, mode='auto', epsilon=0.001, cooldown=0, min_lr=0)\n",
     "\n",
-    "tensorboard = TensorBoard(log_dir='./logs/log4', histogram_freq=0, write_graph=False, write_images=True)\n"
+    "tensorboard = TensorBoard(log_dir=LOG_DIR, histogram_freq=0, write_graph=False, write_images=True)\n"
    ]
   },
   {
@@ -433,7 +545,7 @@
     "    layer.trainable = False\n",
     "\n",
     "# compile the model (should be done *after* setting layers to non-trainable)\n",
-    "optimizer = Adam(lr=LearningRate)\n",
+    "optimizer = Adam(lr=LEARNINGRATE)\n",
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "# train the model on the new data for a few epochs\n",
@@ -686,7 +798,7 @@
     "# test_model = load_model('./checkpoints/checkpoint2/weights.004-0.0565.hdf5')\n",
     "test_model_name = files[index].split('/')[-2][-1:]+'_'+files[index].split('/')[-1]\n",
     "\n",
-    "def test_generator(df, datagen = None, batch_size = BatchSize):\n",
+    "def test_generator(df, datagen = None, batch_size = BATCHSIZE):\n",
     "    n = df.shape[0]\n",
     "    batch_index = 0\n",
     "    while 1:\n",
@@ -756,10 +868,10 @@
     "\n",
     "file_name = 'GTbbox_CROPpred_df_'+test_model_name+'_.pickle'\n",
     "if os.path.exists('../data/'+file_name):\n",
-    "    print ('Loading from file'+file_name)\n",
+    "    print ('Loading from file '+file_name)\n",
     "    RFCNbbox_RFCNpred_CROPpred_df = pd.read_pickle('../data/'+file_name)\n",
     "else:\n",
-    "    print ('Generating file'+file_name) \n",
+    "    print ('Generating file '+file_name) \n",
     "    nb_augmentation = 1\n",
     "    if nb_augmentation ==1:\n",
     "        test_preds = test_model.predict_generator(test_generator(df=GTbbox_df), val_samples=GTbbox_df.shape[0], nb_worker=1, pickle_safe=False)\n",
@@ -784,16 +896,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Loading from file RFCNbbox_RFCNpred_df.pickle.\n"
+     "ename": "NameError",
+     "evalue": "name 'os' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-d124087a712b>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mfile_name\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m'RFCNbbox_RFCNpred_df.pickle'\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 6\u001b[0;31m \u001b[0;32mif\u001b[0m \u001b[0mos\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      7\u001b[0m     \u001b[0mprint\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0;34m'Loading from file'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mRFCNbbox_RFCNpred_df\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mpd\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mread_pickle\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'../data/'\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfile_name\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'os' is not defined"
      ]
     }
    ],
@@ -804,14 +920,14 @@
     "\n",
     "file_name = 'RFCNbbox_RFCNpred_df.pickle'\n",
     "if os.path.exists('../data/'+file_name):\n",
-    "    print ('Loading from file'+file_name)\n",
+    "    print ('Loading from file '+file_name)\n",
     "    RFCNbbox_RFCNpred_df = pd.read_pickle('../data/'+file_name)\n",
     "else:\n",
-    "    print ('Generating file'+file_name)        \n",
+    "    print ('Generating file '+file_name)        \n",
     "    RFCNbbox_RFCNpred_df = pd.DataFrame(columns=['image_class','image_file','crop_index','xmin','ymin','xmax','ymax',\n",
     "                                                  'NoF_RFCN', 'ALB_RFCN', 'BET_RFCN', 'DOL_RFCN',\n",
     "                                                  'LAG_RFCN', 'OTHER_RFCN', 'SHARK_RFCN', 'YFT_RFCN']) \n",
-    "    RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
+    "#     RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
     "    with open('../data/RFCN_detections/detections_full_AGNOSTICnms_'+RFCN_MODEL+'.pkl','rb') as f:\n",
     "        detections_full_AGNOSTICnms = pickle.load(f, encoding='latin1') \n",
     "    with open(\"../RFCN/ImageSets/Main/test.txt\",\"r\") as f:\n",
@@ -890,10 +1006,10 @@
     "\n",
     "file_name = 'RFCNbbox_RFCNpred_CROPpred_df_'+test_model_name+'_.pickle'\n",
     "if os.path.exists('../data/'+file_name):\n",
-    "    print ('Loading from file'+file_name)\n",
+    "    print ('Loading from file '+file_name)\n",
     "    RFCNbbox_RFCNpred_CROPpred_df = pd.read_pickle('../data/'+file_name)\n",
     "else:\n",
-    "    print ('Generating file'+file_name)  \n",
+    "    print ('Generating file '+file_name)  \n",
     "    nb_augmentation = 5\n",
     "    if nb_augmentation ==1:\n",
     "        test_preds = test_model.predict_generator(test_generator(df=RFCNbbox_RFCNpred_df), \n",
