--- a/model_bbox/Classifier_directory.ipynb
+++ b/model_bbox/Classifier_directory.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
@@ -50,11 +50,11 @@
     "TRAIN_DIR = '../data/train/'\n",
     "TEST_DIR = '../RFCN/JPEGImages/'\n",
     "RFCN_MODEL = 'resnet101_rfcn_ohem_iter_30000'\n",
-    "# CROP_MODEL = 'resnet50_256_dropout5'\n",
-    "# CHECKPOINT_DIR = './checkpoints/checkpoint' + CROPMODEL + '/'\n",
-    "# LOG_DIR = './logs/log' + CROPMODEL + '/'\n",
-    "CHECKPOINT_DIR = './checkpoints/checkpoint4/'\n",
-    "LOG_DIR = './logs/log4/'\n",
+    "CROP_MODEL = 'resnet50__DO5_256_DO5'\n",
+    "CHECKPOINT_DIR = './checkpoints/checkpoint' + CROP_MODEL + '/'\n",
+    "LOG_DIR = './logs/log' + CROP_MODEL + '/'\n",
+    "# CHECKPOINT_DIR = './checkpoints/checkpoint4/'\n",
+    "# LOG_DIR = './logs/log4/'\n",
     "FISH_CLASSES = ['NoF', 'ALB', 'BET', 'DOL', 'LAG', 'OTHER', 'SHARK', 'YFT']\n",
     "CONF_THRESH = 0.8\n",
     "ROWS = 224\n",
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 25,
    "metadata": {
     "collapsed": false
    },
@@ -196,7 +196,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Loading from fileNoFbbox_df.pickle\n"
+      "Loading from file NoFbbox_df.pickle\n"
      ]
     }
    ],
@@ -319,39 +319,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 26,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(3496, 7) (875, 7)\n",
+      "(106456, 7)\n",
+      "88\n",
+      "(106368, 7) (88, 7)\n"
+     ]
+    }
+   ],
    "source": [
-    "#train data prepare\n",
-    "train_df, valid_df = train_test_split(GTbbox_df, test_size = 0.2, random_state=1986, stratify=GTbbox_df['crop_class'])\n",
+    "# train data prepare\n",
+    "# GTbbox_df = ['image_file','crop_index','crop_class','xmin',''ymin','xmax','ymax']\n",
+    "# NoFbbox_df = ['image_file','crop_index','crop_class','xmin','ymin','xmax','ymax',\n",
+    "#               'NoF_RFCN','ALB_RFCN','BET_RFCN','DOL_RFCN','LAG_RFCN','OTHER_RFCN','SHARK_RFCN','YFT_RFCN']\n",
     "\n",
-    "nb_perClass = int(BATCHSIZE / len(FISH_CLASSES)) \n",
-    "samples_per_epoch=BATCHSIZE*math.ceil(train_df.groupby('crop_class').size()['ALB']/nb_perClass)\n",
+    "train_fish_df, valid_fish_df = train_test_split(GTbbox_df, test_size=0.2, random_state=1986, stratify=GTbbox_df['crop_class'])\n",
+    "print(train_fish_df.shape,valid_fish_df.shape)\n",
+    "NoFbbox_df.drop(['NoF_RFCN','ALB_RFCN','BET_RFCN','DOL_RFCN','LAG_RFCN','OTHER_RFCN','SHARK_RFCN','YFT_RFCN'], axis=1, inplace=True)\n",
+    "print(NoFbbox_df.shape)\n",
+    "nb_NoF_valid = math.ceil(valid_fish_df.shape[0]/10)\n",
+    "print(nb_NoF_valid)\n",
+    "train_nof_df, valid_nof_df = train_test_split(NoFbbox_df, test_size=nb_NoF_valid, random_state=1986)\n",
+    "print(train_nof_df.shape,valid_nof_df.shape)\n",
+    "\n",
+    "nb_fish = math.ceil(BATCHSIZE*0.25 / (len(FISH_CLASSES)-1))\n",
+    "nb_nof = BATCHSIZE - nb_fish*(len(FISH_CLASSES)-1)\n",
+    "samples_per_epoch=BATCHSIZE*math.ceil(train_fish_df.groupby('crop_class').size()['ALB']/nb_fish)\n",
     "  \n",
-    "def train_generator(datagen, df):\n",
-    "    while 1:\n",
-    "        batch_x = np.zeros((BATCHSIZE, ROWS, COLS, 3), dtype=K.floatx())\n",
-    "        batch_y = np.zeros((BATCHSIZE, len(FISH_CLASSES)), dtype=K.floatx())\n",
-    "        fn = lambda obj: obj.loc[np.random.choice(obj.index, size=nb_perClass, replace=False),:]\n",
-    "        batch_df = df.groupby('crop_class', as_index=True).apply(fn)\n",
-    "        i = 0\n",
-    "        for index,row in batch_df.iterrows():\n",
-    "            row = row.tolist()\n",
-    "            image_file = os.path.join(row[0], row[1])\n",
-    "            fish = row[3]\n",
-    "            bbox = row[4:8]\n",
-    "            cropped = load_img(TRAIN_DIR+image_file,bbox,target_size=(ROWS,COLS))\n",
-    "            x = np.asarray(cropped, dtype=K.floatx())\n",
-    "            x = datagen.random_transform(x)\n",
-    "            x = preprocess_input(x)\n",
-    "            batch_x[i] = x\n",
-    "            batch_y[i,FISH_CLASSES.index(fish)] = 1\n",
-    "            i += 1\n",
-    "        yield (batch_x, batch_y)\n",
-    "\n",
     "train_datagen = ImageDataGenerator(\n",
     "    rotation_range=180,\n",
     "    shear_range=0.2,\n",
@@ -361,23 +363,39 @@
     "    horizontal_flip=True,\n",
     "    vertical_flip=True)\n",
     "\n",
+    "def train_generator(datagen, fish_df, nof_df):\n",
+    "    while 1:\n",
+    "        batch_x = np.zeros((BATCHSIZE, ROWS, COLS, 3), dtype=K.floatx())\n",
+    "        batch_y = np.zeros((BATCHSIZE, len(FISH_CLASSES)), dtype=K.floatx())\n",
+    "        fn = lambda obj: obj.loc[np.random.choice(obj.index, size=nb_fish, replace=False),:]\n",
+    "        batch_fish_df = fish_df.groupby('crop_class', as_index=True).apply(fn)\n",
+    "        batch_nof_df = nof_df.sample(n=nb_nof)\n",
+    "        batch_df = pd.concat([batch_fish_df,batch_nof_df], axis=0)\n",
+    "        i = 0\n",
+    "        for index,row in batch_df.iterrows():\n",
+    "#             row = row.tolist()\n",
+    "            image_file = row['image_file']\n",
+    "            fish = row['crop_class']\n",
+    "            bbox = [row['xmin'],row['ymin'],row['xmax'],row['ymax']]\n",
+    "            cropped = load_img(TEST_DIR+image_file,bbox,target_size=(ROWS,COLS))\n",
+    "            x = np.asarray(cropped, dtype=K.floatx())\n",
+    "            x = datagen.random_transform(x)\n",
+    "            x = preprocess_input(x)\n",
+    "            batch_x[i] = x\n",
+    "            batch_y[i,FISH_CLASSES.index(fish)] = 1\n",
+    "            i += 1\n",
+    "        yield (batch_x, batch_y)\n",
     "\n",
     "# validation_data (valid_x,valid_y)\n",
-    "df_1 = valid_df[valid_df.crop_class != 'NoF']\n",
-    "l = valid_df.groupby('crop_class').size()\n",
-    "l.pop('NoF')\n",
-    "nb_NoF_valid = math.ceil(l.sum()/10)\n",
-    "df_2 = valid_df[valid_df.crop_class == 'NoF'].sample(n=nb_NoF_valid)\n",
-    "valid_df = pd.concat([df_1,df_2], axis=0)\n",
+    "valid_df = pd.concat([valid_fish_df,valid_nof_df], axis=0)\n",
     "valid_x = np.zeros((valid_df.shape[0], ROWS, COLS, 3), dtype=K.floatx())\n",
     "valid_y = np.zeros((valid_df.shape[0], len(FISH_CLASSES)), dtype=K.floatx())\n",
     "i = 0\n",
     "for index,row in valid_df.iterrows():\n",
-    "    row = row.tolist()\n",
-    "    image_file = os.path.join(row[0], row[1])\n",
-    "    fish = row[3]\n",
-    "    bbox = row[4:8]\n",
-    "    cropped = load_img(TRAIN_DIR+image_file,bbox,target_size=(ROWS,COLS))\n",
+    "    image_file = row['image_file']\n",
+    "    fish = row['crop_class']\n",
+    "    bbox = [row['xmin'],row['ymin'],row['xmax'],row['ymax']]\n",
+    "    cropped = load_img(TEST_DIR+image_file,bbox,target_size=(ROWS,COLS))\n",
     "    x = np.asarray(cropped, dtype=K.floatx())\n",
     "    x = preprocess_input(x)\n",
     "    valid_x[i] = x\n",
@@ -387,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 27,
    "metadata": {
     "collapsed": false
    },
@@ -406,119 +424,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Epoch 1/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.8989 - acc: 0.3777Epoch 00000: val_loss improved from inf to 1.40823, saving model to ./checkpoints/checkpoint4/weights.000-1.4082.hdf5\n",
-      "16128/16128 [==============================] - 228s - loss: 1.8950 - acc: 0.3786 - val_loss: 1.4082 - val_acc: 0.4688\n",
-      "Epoch 2/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.2861 - acc: 0.5555Epoch 00001: val_loss improved from 1.40823 to 1.21291, saving model to ./checkpoints/checkpoint4/weights.001-1.2129.hdf5\n",
-      "16128/16128 [==============================] - 204s - loss: 1.2847 - acc: 0.5556 - val_loss: 1.2129 - val_acc: 0.5530\n",
-      "Epoch 3/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 1.0867 - acc: 0.6232Epoch 00002: val_loss improved from 1.21291 to 1.15060, saving model to ./checkpoints/checkpoint4/weights.002-1.1506.hdf5\n",
-      "16128/16128 [==============================] - 209s - loss: 1.0861 - acc: 0.6233 - val_loss: 1.1506 - val_acc: 0.5769\n",
-      "Epoch 4/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.9851 - acc: 0.6521Epoch 00003: val_loss improved from 1.15060 to 1.13128, saving model to ./checkpoints/checkpoint4/weights.003-1.1313.hdf5\n",
-      "16128/16128 [==============================] - 207s - loss: 0.9851 - acc: 0.6521 - val_loss: 1.1313 - val_acc: 0.5738\n",
-      "Epoch 5/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.9019 - acc: 0.6810Epoch 00004: val_loss improved from 1.13128 to 1.12188, saving model to ./checkpoints/checkpoint4/weights.004-1.1219.hdf5\n",
-      "16128/16128 [==============================] - 209s - loss: 0.9024 - acc: 0.6811 - val_loss: 1.1219 - val_acc: 0.5644\n",
-      "Epoch 6/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.8816 - acc: 0.6869Epoch 00005: val_loss improved from 1.12188 to 1.01927, saving model to ./checkpoints/checkpoint4/weights.005-1.0193.hdf5\n",
-      "16128/16128 [==============================] - 209s - loss: 0.8817 - acc: 0.6869 - val_loss: 1.0193 - val_acc: 0.5998\n",
-      "Epoch 7/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.8204 - acc: 0.7068Epoch 00006: val_loss improved from 1.01927 to 0.96917, saving model to ./checkpoints/checkpoint4/weights.006-0.9692.hdf5\n",
-      "16128/16128 [==============================] - 209s - loss: 0.8210 - acc: 0.7066 - val_loss: 0.9692 - val_acc: 0.6279\n",
-      "Epoch 8/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.8225 - acc: 0.7020Epoch 00007: val_loss did not improve\n",
-      "16128/16128 [==============================] - 208s - loss: 0.8229 - acc: 0.7018 - val_loss: 0.9893 - val_acc: 0.6091\n",
-      "Epoch 9/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7726 - acc: 0.7224Epoch 00008: val_loss improved from 0.96917 to 0.94589, saving model to ./checkpoints/checkpoint4/weights.008-0.9459.hdf5\n",
-      "16128/16128 [==============================] - 210s - loss: 0.7723 - acc: 0.7228 - val_loss: 0.9459 - val_acc: 0.6351\n",
-      "Epoch 10/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7517 - acc: 0.7329Epoch 00009: val_loss improved from 0.94589 to 0.90618, saving model to ./checkpoints/checkpoint4/weights.009-0.9062.hdf5\n",
-      "16128/16128 [==============================] - 209s - loss: 0.7527 - acc: 0.7326 - val_loss: 0.9062 - val_acc: 0.6476\n",
-      "Epoch 11/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7401 - acc: 0.7368Epoch 00010: val_loss improved from 0.90618 to 0.85837, saving model to ./checkpoints/checkpoint4/weights.010-0.8584.hdf5\n",
-      "16128/16128 [==============================] - 209s - loss: 0.7408 - acc: 0.7367 - val_loss: 0.8584 - val_acc: 0.6778\n",
-      "Epoch 12/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7326 - acc: 0.7382Epoch 00011: val_loss did not improve\n",
-      "16128/16128 [==============================] - 209s - loss: 0.7320 - acc: 0.7381 - val_loss: 0.9092 - val_acc: 0.6476\n",
-      "Epoch 13/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7305 - acc: 0.7383Epoch 00012: val_loss did not improve\n",
-      "16128/16128 [==============================] - 209s - loss: 0.7298 - acc: 0.7384 - val_loss: 0.8675 - val_acc: 0.6715\n",
-      "Epoch 14/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.7028 - acc: 0.7488Epoch 00013: val_loss improved from 0.85837 to 0.83535, saving model to ./checkpoints/checkpoint4/weights.013-0.8353.hdf5\n",
-      "16128/16128 [==============================] - 209s - loss: 0.7025 - acc: 0.7486 - val_loss: 0.8353 - val_acc: 0.6913\n",
-      "Epoch 15/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6931 - acc: 0.7531Epoch 00014: val_loss did not improve\n",
-      "16128/16128 [==============================] - 209s - loss: 0.6931 - acc: 0.7531 - val_loss: 0.8406 - val_acc: 0.6913\n",
-      "Epoch 16/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6775 - acc: 0.7556Epoch 00015: val_loss did not improve\n",
-      "16128/16128 [==============================] - 208s - loss: 0.6768 - acc: 0.7557 - val_loss: 0.8746 - val_acc: 0.6642\n",
-      "Epoch 17/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6820 - acc: 0.7549Epoch 00016: val_loss improved from 0.83535 to 0.80266, saving model to ./checkpoints/checkpoint4/weights.016-0.8027.hdf5\n",
-      "16128/16128 [==============================] - 209s - loss: 0.6825 - acc: 0.7549 - val_loss: 0.8027 - val_acc: 0.7079\n",
-      "Epoch 18/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6533 - acc: 0.7618Epoch 00017: val_loss did not improve\n",
-      "16128/16128 [==============================] - 209s - loss: 0.6532 - acc: 0.7618 - val_loss: 0.8484 - val_acc: 0.6757\n",
-      "Epoch 19/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6600 - acc: 0.7613Epoch 00018: val_loss did not improve\n",
-      "16128/16128 [==============================] - 208s - loss: 0.6595 - acc: 0.7613 - val_loss: 0.8196 - val_acc: 0.6881\n",
-      "Epoch 20/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6449 - acc: 0.7637Epoch 00019: val_loss did not improve\n",
-      "16128/16128 [==============================] - 209s - loss: 0.6448 - acc: 0.7637 - val_loss: 0.8228 - val_acc: 0.6850\n",
-      "Epoch 21/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6526 - acc: 0.7636Epoch 00020: val_loss improved from 0.80266 to 0.78636, saving model to ./checkpoints/checkpoint4/weights.020-0.7864.hdf5\n",
-      "16128/16128 [==============================] - 210s - loss: 0.6520 - acc: 0.7635 - val_loss: 0.7864 - val_acc: 0.7245\n",
-      "Epoch 22/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6458 - acc: 0.7666Epoch 00021: val_loss improved from 0.78636 to 0.78284, saving model to ./checkpoints/checkpoint4/weights.021-0.7828.hdf5\n",
-      "16128/16128 [==============================] - 208s - loss: 0.6467 - acc: 0.7661 - val_loss: 0.7828 - val_acc: 0.7141\n",
-      "Epoch 23/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6285 - acc: 0.7729Epoch 00022: val_loss did not improve\n",
-      "16128/16128 [==============================] - 208s - loss: 0.6286 - acc: 0.7727 - val_loss: 0.8188 - val_acc: 0.6871\n",
-      "Epoch 24/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6295 - acc: 0.7740Epoch 00023: val_loss did not improve\n",
-      "16128/16128 [==============================] - 209s - loss: 0.6286 - acc: 0.7741 - val_loss: 0.8018 - val_acc: 0.6965\n",
-      "Epoch 25/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6176 - acc: 0.7778Epoch 00024: val_loss improved from 0.78284 to 0.76216, saving model to ./checkpoints/checkpoint4/weights.024-0.7622.hdf5\n",
-      "16128/16128 [==============================] - 210s - loss: 0.6166 - acc: 0.7781 - val_loss: 0.7622 - val_acc: 0.7193\n",
-      "Epoch 26/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6227 - acc: 0.7763Epoch 00025: val_loss did not improve\n",
-      "16128/16128 [==============================] - 207s - loss: 0.6228 - acc: 0.7763 - val_loss: 0.7784 - val_acc: 0.7100\n",
-      "Epoch 27/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6170 - acc: 0.7771Epoch 00026: val_loss did not improve\n",
-      "16128/16128 [==============================] - 209s - loss: 0.6164 - acc: 0.7776 - val_loss: 0.7903 - val_acc: 0.7027\n",
-      "Epoch 28/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6084 - acc: 0.7816Epoch 00027: val_loss improved from 0.76216 to 0.76178, saving model to ./checkpoints/checkpoint4/weights.027-0.7618.hdf5\n",
-      "16128/16128 [==============================] - 208s - loss: 0.6085 - acc: 0.7814 - val_loss: 0.7618 - val_acc: 0.7193\n",
-      "Epoch 29/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6018 - acc: 0.7814Epoch 00028: val_loss did not improve\n",
-      "16128/16128 [==============================] - 209s - loss: 0.6017 - acc: 0.7814 - val_loss: 0.7830 - val_acc: 0.7027\n",
-      "Epoch 30/30\n",
-      "16000/16128 [============================>.] - ETA: 1s - loss: 0.6032 - acc: 0.7791Epoch 00029: val_loss did not improve\n",
-      "16128/16128 [==============================] - 212s - loss: 0.6032 - acc: 0.7791 - val_loss: 0.8031 - val_acc: 0.6809\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "<keras.callbacks.History at 0x7fd9c07e2c88>"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#Resnet50\n",
     "#top layer training\n",
@@ -549,7 +460,7 @@
     "model.compile(optimizer=optimizer, loss='categorical_crossentropy', metrics=['accuracy'])\n",
     "\n",
     "# train the model on the new data for a few epochs\n",
-    "model.fit_generator(train_generator(datagen=train_datagen, df=train_df), samples_per_epoch=samples_per_epoch, nb_epoch=30, verbose=1,\n",
+    "model.fit_generator(train_generator(datagen=train_datagen, fish_df=train_fish_df, nof_df=train_nof_df), samples_per_epoch=samples_per_epoch, nb_epoch=30, verbose=1,\n",
     "                    callbacks=[early_stopping, model_checkpoint, learningrate_schedule, tensorboard], \n",
     "                    validation_data=(valid_x,valid_y), nb_worker=3, pickle_safe=True)"
    ]
